UtahLiveDataTest/src/objects/GoalObjective__c.object
<CustomObject>
    <description>Goals and Objectives object for Performance management</description>
    <fields>
        <fullName>AchievedQComments__c</fullName>
        <label>AchievedQComments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AchievedQ__c</fullName>
        <label>AchievedQ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ActivitiesAndMethods__c</fullName>
        <label>ACTIVITIES AND METHODS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <description>Allocated Amount for Goal/Objective</description>
        <label>Allocated Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Allocated %</description>
        <label>Allocated %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Goals Objectives</relationshipLabel>
        <relationshipName>Goals_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <formula>Application__r.ExternalOrganizationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Goals Objectives</relationshipLabel>
        <relationshipName>Goals_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardQ1Comments__c</fullName>
        <label>AwardQ1Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AwardQ1__c</fullName>
        <description>This is entered in award phase</description>
        <label>AwardQ1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardQ2Comments__c</fullName>
        <label>AwardQ2Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AwardQ2__c</fullName>
        <label>AwardQ2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardQ3Comments__c</fullName>
        <label>AwardQ3Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AwardQ3__c</fullName>
        <label>AwardQ3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardTotalQuantitative__c</fullName>
        <formula>AwardQ1__c+AwardQ2__c+AwardQ3__c+AwardQ4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardTotalQuantitative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award to which the Goal is associated</description>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Goals_and_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CombineTextQuestions__c</fullName>
        <label>CombineTextQuestions</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for Goals and Objectives</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Due Date for Goal Completion</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueDates__c</fullName>
        <formula>IF(AND(IsParent__c==false, ParentGoal__c!=null), 

&quot;Due Date for Q1: &quot; + TEXT(Q1DueDate__c) &amp; BR() &amp; BR() &amp; 

&quot;Due Date for Q2: &quot; + TEXT(Q2DueDate__c) &amp; BR() &amp; BR() &amp; 

&quot;Due Date for Q3: &quot; + TEXT(Q3DueDate__c) &amp; BR() &amp; BR() &amp; 

&quot;Due Date for Q4: &quot; + TEXT(Q4DueDate__c) &amp; BR() &amp; BR(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DueDates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCheck__c</fullName>
        <label>EmailCheck</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenditureAmount__c</fullName>
        <label>Expenditure Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail (FORMS)</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Goals Objectives</relationshipLabel>
        <relationshipName>Goals_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GOAchievedQ__c</fullName>
        <formula>IF(AND(IsParent__c==false, ParentGoal__c!=null), 

&quot;Q1: &quot; + TEXT(AwardQ1__c) &amp; BR() &amp; BR() &amp; 

&quot;Q2: &quot; + TEXT(AwardQ2__c) &amp; BR() &amp; BR() &amp; 

&quot;Q3: &quot; + TEXT(AwardQ3__c) &amp; BR() &amp; BR() &amp; 

&quot;Q4: &quot; + TEXT(AwardQ4__c) &amp; BR() &amp; BR() &amp; 

&quot;Total Quantitative: &quot; + TEXT(AwardTotalQuantitative__c ) &amp; BR() &amp; BR(), 

&quot;N/A&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOAchievedQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoalAddress__c</fullName>
        <label>This goal will address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Coordinated Community Response</fullName>
                </value>
                <value>
                    <fullName>Policies</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Data Collection and Communication Systems</fullName>
                </value>
                <value>
                    <fullName>Specialized Units</fullName>
                </value>
                <value>
                    <fullName>System Improvements</fullName>
                </value>
                <value>
                    <fullName>Victim Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoalObjectiveCombineQuestions__c</fullName>
        <formula>IF(AND(IsParent__c==false, ParentGoal__c!=null), 

&quot;Q1: &quot; + TEXT(Q1__c) &amp; BR() &amp; BR() &amp; 

&quot;Q2: &quot; + TEXT(Q2__c) &amp; BR() &amp; BR() &amp; 

&quot;Q3: &quot; + TEXT(Q3__c) &amp; BR() &amp; BR() &amp; 

&quot;Q4: &quot; + TEXT(Q4__c) &amp; BR() &amp; BR() &amp; 

&quot;Total Quantitative: &quot; + TEXT(TotalQuantitative__c ) &amp; BR() &amp; BR(),
 
&quot;N/A&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GoalObjectiveCombineQuestions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEditDelete__c</fullName>
        <formula>Announcement__r.HideEditBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAnnouncementEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>NOT(ISPICKVAL(Award__r.Status__c , &apos;Activated&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>OR(AND(Program__c!=null, NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))),
   AND(Award__c!=null, NOT(ISPICKVAL(Award__r.Status__c , &apos;Created&apos;))),
   AND(Announcement__c!=null, Announcement__r.HideEditBtn__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Award__r.Status__c , &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewGoalBtn__c</fullName>
        <formula>IF(IsParent__c != null &amp;&amp; Award__c != null, NOT(ISPICKVAL(Award__r.Status__c, &apos;Created&apos;)), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewGoalBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Goal a Parent ?</description>
        <inlineHelpText>Is this Goal a Parent ?</inlineHelpText>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeasureEffectiveness__c</fullName>
        <label>Measure Effectiveness</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OldGoalYear__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Last Year</fullName>
                </value>
                <value>
                    <fullName>The Year Before Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Goal and Objective Object. This acts as a self lookup.</description>
        <inlineHelpText>Lookup to Goal and Objective Object. This acts as a self lookup.</inlineHelpText>
        <label>Parent Goal</label>
        <referenceTo>GoalObjective__c</referenceTo>
        <relationshipLabel>Goals Objectives</relationshipLabel>
        <relationshipName>Goals_and_Objectives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramPurposeAddressed__c</fullName>
        <label>Program Purpose Addressed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Goals Objectives</relationshipLabel>
        <relationshipName>Goals_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1DueDate__c</fullName>
        <label>Q1 DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2DueDate__c</fullName>
        <label>Q2 DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3DueDate__c</fullName>
        <label>Q3 DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantitativeNumberMeasures__c</fullName>
        <label>Quantitative number measures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number of trainings provided</fullName>
                </value>
                <value>
                    <fullName>Number of people trained</fullName>
                </value>
                <value>
                    <fullName>Number of victims served</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Manuals</fullName>
                </value>
                <value>
                    <fullName>Training curricula</fullName>
                </value>
                <value>
                    <fullName>Training materials</fullName>
                </value>
                <value>
                    <fullName>Evaluations</fullName>
                </value>
                <value>
                    <fullName>Interpreters</fullName>
                </value>
                <value>
                    <fullName>Safety audits</fullName>
                </value>
                <value>
                    <fullName>Security personnel or equipment</fullName>
                </value>
                <value>
                    <fullName>Victim services provided</fullName>
                </value>
                <value>
                    <fullName>Law enforcement services provided</fullName>
                </value>
                <value>
                    <fullName>Prosecution victim services provided</fullName>
                </value>
                <value>
                    <fullName>Court services provided</fullName>
                </value>
                <value>
                    <fullName>Probation &amp; Parole (offender accountability) Services provided</fullName>
                </value>
                <value>
                    <fullName>Batterer Intervention Services provided</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Partially Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetedQ__c</fullName>
        <description>populated in goaltriggerhelper</description>
        <label>TargetedQ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of Goal and Objective</description>
        <inlineHelpText>Title of Goal and Objective</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalQuantitative__c</fullName>
        <formula>Q1__c + Q2__c + Q3__c + Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quantitative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>if(IsParent__c==false,&apos;Objective&apos;,&apos;Goal&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VocaGoalAddress__c</fullName>
        <label>This goal will address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Victim Services</fullName>
                </value>
                <value>
                    <fullName>Voca Goal</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VocaQuantitativeNumberMeasures__c</fullName>
        <label>Quantitative number measures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number of trainings provided</fullName>
                </value>
                <value>
                    <fullName>Number of people trained</fullName>
                </value>
                <value>
                    <fullName>Number of victims served</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Manuals</fullName>
                </value>
                <value>
                    <fullName>Training curricula</fullName>
                </value>
                <value>
                    <fullName>Training materials</fullName>
                </value>
                <value>
                    <fullName>Evaluations</fullName>
                </value>
                <value>
                    <fullName>Interpreters</fullName>
                </value>
                <value>
                    <fullName>Victim services provided</fullName>
                </value>
                <value>
                    <fullName>Number of groups provided</fullName>
                </value>
                <value>
                    <fullName>Number of total group attendance</fullName>
                </value>
                <value>
                    <fullName>Number of therapy hours</fullName>
                </value>
                <value>
                    <fullName>Number of volunteers recruited</fullName>
                </value>
                <value>
                    <fullName>Number of volunteers trained</fullName>
                </value>
                <value>
                    <fullName>Number of volunteers maintained</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testemail__c</fullName>
        <label>testemail</label>
        <type>Email</type>
    </fields>
    <label>Goal Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>IsParent__c</columns>
        <columns>DueDate__c</columns>
        <columns>Award__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GOB-{0000}</displayFormat>
        <label>Goals and Objectives Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals Objectives</pluralLabel>
    <recordTypes>
        <fullName>Announcement</fullName>
        <active>true</active>
        <description>Announcement RecordType for GoalObjective</description>
        <label>Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <description>Award RecordType for Goal and Objective</description>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <description>Program RecordType for Goal and Objective</description>
        <label>Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allocated_Percentage_Check</fullName>
        <active>true</active>
        <description>Allocated_%_can_not_be_more_than_100%</description>
        <errorConditionFormula>if(Allocated__c&gt;100 || Allocated__c &lt;0,true,false)</errorConditionFormula>
        <errorMessage>Allocated Percentage should be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Goal_Objective_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Application__c != null,IF(Application__r.FormsValidated__c, true, false), false)</errorConditionFormula>
        <errorMessage>Forms are not editable after validation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>DueDate__c&lt; TODAY()</errorConditionFormula>
        <errorMessage>Due Date must be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(EmailCheck__c,&apos;Yes&apos;),OR(ISNULL(Q1DueDate__c),ISNULL(Q2DueDate__c),ISNULL(Q3DueDate__c),ISNULL(Q4DueDate__c)))</errorConditionFormula>
        <errorMessage>Please enter the duedates for respective quarters.</errorMessage>
    </validationRules>
</CustomObject>